[tool.poetry]
name = "morse-code"
version = "0.1.0"
description = ""
authors = ["ducojoek <84350199+ducojoek@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyvisa = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
